# Prompttoanimation

./: README.md
rustattennew/: Cargo.toml
rustattennew/src/: main.rs
rustattennew/src/config/: mailer.rs  mod.rs
rustattennew/src/controller/: authcontroller.rs  jobcontroller.rs  mod.rs
rustattennew/src/db/: db.rs  mod.rs
rustattennew/src/emails/: emalitemplates.rs
rustattennew/src/middleware/: authmiddleware.rs  mod.rs
rustattennew/src/models/: jobmodel.rs  mod.rs  user.rs
rustattennew/src/routes/: jobroutes.rs  mod.rs  routes.rs
rustattennew/src/schema/: mod.rs  types.rs
rustattennew/src/services/: jobservice.rs  mod.rs
rustattennew/src/utils/: generatejwt.rs  hashpassword.rs  mod.rs  setcookie.rs
test-render/: .gitignore  scene.py
test1payload/: Cargo.toml
test1payload/src/: main.rs
tests/: Cargo.toml
tests/src/: main.rs  test_payloads.rs  test_users.rs
worker/: Cargo.toml  Dockerfile
worker/src/: backupprompt.rs  cleanup.rs  concurrent.rs  configgemini.rs  docker.rs  filesystem.rs  generator.rs  main.rs  models.rs  mongo.rs  processor.rs  redis.rs  renderer.rs  validator.rs  worker.rs
worker/src/services/: job_service.rs  mod.rs
