[package]
name = "rustattennew"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core web stack (UPDATED)
axum = "0.8"
tokio = { version = "1.52", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
mongodb = "2.8" # ok for now

# Auth
bcrypt = "0.15"
jsonwebtoken = "9"

# Env
dotenvy = "0.15"

# HTTP middleware (IMPORTANT: match axum ecosystem)
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Axum extras (UPDATED)
axum-extra = { version = "0.12", features = ["cookie"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utils

rand = "0.8"

uuid = { version = "1", features = ["v4", "serde"] }


# Email
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }

redis = { version = "0.25", features = ["tokio-comp"] }

deadpool-redis = "0.14"